fix chrome jumpy-logo bug

--- a/source/_patterns/02-organisms/footers/wwu-footer/_wwu-footer.scss
+++ b/source/_patterns/02-organisms/footers/wwu-footer/_wwu-footer.scss
@@ -54,7 +54,6 @@
       -ms-grid-row: 2;
       -ms-grid-row-span: 2;
     }
-    margin: auto;
 
     grid-area: logo;
     -ms-grid-column: 2;
